Create navigation bar styles

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,7 @@ $font-family-sans-serif: $font-family--arimo, -apple-system, blinkmacsystemfont,
 $headings-font-family: $font-family--josefin-sans;
 $input-color: $color-name--silver-chalice;
 $input-border-color: $color-name--mercury;
+$border-color: $color-name--mercury;
 
 
 @import "~bootstrap/scss/bootstrap.scss";
