--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -18,6 +18,7 @@ $font-family--eb-garamond: ("EB Garamond", serif);
 /// @author Radmir Nabiullin
 ///
 /// @type Color
+$color-name--alabaster: #f7f7f7;
 $color-name--alto: #d7d7d7;
 $color-name--black: #000000;
 $color-name--boulder: #757575;
