Create main header styles

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -23,8 +23,11 @@ $color-name--alto: #d7d7d7;
 $color-name--black: #000000;
 $color-name--boulder: #757575;
 $color-name--carnation: #f14a58;
+$color-name--golden-sand: #f5de75;
+$color-name--iron: #dee0e2;
 $color-name--mercury: #e5e5e5;
-$color-name--picton-blue: #4bb8f0;
+$color-name--picton-blue_light: #50c1e9;
+$color-name--picton-blue_base: #4bb8f0;
 $color-name--sapphire: #315295;
 $color-name--silver-chalice: #a8a8a8;
 $color-name--white: #ffffff;
