--- a/assets/scss/base/_transitions.scss
+++ b/assets/scss/base/_transitions.scss
@@ -7,3 +7,21 @@
 .fade-leave-to {
   opacity: 0;
 }
+
+.bounce-enter-active {
+  animation: bounce-in 0.5s;
+}
+
+.bounce-leave-active {
+  animation: bounce-in 0.5s reverse;
+}
+
+@keyframes bounce-in {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
