Add page transition

--- a/assets/scss/base/_transitions.scss
+++ b/assets/scss/base/_transitions.scss
@@ -25,3 +25,14 @@
     transform: scale(1);
   }
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.5s;
+}
+
+.page-enter,
+.page-leave-active {
+  opacity: 0;
+}
+
